///search bar
const String SEARCH_BAR_TEXT ='Search Play Books';
///Main Page
const String EBOOKS = 'Ebooks';
const String LIBRARY = 'Library';
const String AUDIO_BOOKS = 'AudioBooks';
const String YOUR_BOOKS = 'Your books';
const String YOUR_SHELVES = 'Your shelves';