...
              child: Column(
                crossAxisAlignment: CrossAxisAlignment.start,
                mainAxisSize: MainAxisSize.min,
                children: [
                  Builder(
                    builder: (context) => IconButton(
                      key: Key('Shelf Done'),
                      onPressed: () {
                        if (getProvider(context).controller.text.isNotEmpty) {
                          getProvider(context).createShelf(context)
                              .then((_) => Navigator.pushAndRemoveUntil(
                                    context,
                                    MaterialPageRoute(
...
                        color: Colors.blue,
                      ),
                    ),
                  ),
                  Builder(
                    builder: (context) => TextField(
                      key: Key('Shelf Text Field'),
                      autofocus: true,
                      controller: getProvider(context).controller,
                      style: TextStyle(
                        fontWeight: FontWeight.w600,
                        fontSize: TEXT_REGULAR_3X,
                      ),
...
