...
        child: Scaffold(
          backgroundColor: Colors.white,
          resizeToAvoidBottomInset: false,
          body: DefaultTabController(
            length: 2,
            child: NestedScrollView(
              key: Key('scroll'),
              headerSliverBuilder:
                  (BuildContext context, bool innerBoxIsScrolled) {
                return [
                  SliverAppBar(
                    expandedHeight: MediaQuery.of(context).size.width * 1,
                    floating: true,
...
            ),
          ),
          Expanded(
            child: Padding(
              padding: const EdgeInsets.only(left: MARGIN_MEDIUM_2),
              child: TextField(
                key: Key('onTapSearchBar'),
                onTap: () {
                  onTapSearchBar();
                },
                decoration: InputDecoration(
                  border: InputBorder.none,
                  focusedBorder: InputBorder.none,
...
